[package]
name = "mqtt_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = {version="0.8.4", features= ["json"]}
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.143"
tokio = {version="1.47.1", features=["full"]}
tracing = "0.1.41"
